<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <!-- Left Side Content -->
        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start">

            <!-- Composition Section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Composition"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <!-- Carbohydrates Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/carbohydrates" />
                <TextView
                    android:id="@+id/carbo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="30 minutes"
                    android:layout_marginLeft="20dp" />
            </LinearLayout>

            <!-- Calories Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/calories" />
                <TextView
                    android:id="@+id/cals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="350 cals"
                    android:layout_marginLeft="20dp" />
            </LinearLayout>

            <!-- Exercise Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Exercise"
                    android:textSize="17dp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <!-- Exercise Details -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/excer"
                    android:textSize="14dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/brown"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/excer2"
                    android:textSize="9dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/brown"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Gif Images with Labels -->
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/imageSkipping"
                    android:layout_width="120dp"
                    android:layout_height="70dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/skipping" />
                <TextView
                    android:id="@+id/skipping"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stamp1"
                    android:textSize="9dp"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/brown"
                    android:textStyle="bold" />

                <!-- Sit-up Gif -->
                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/imageSitUp"
                    android:layout_marginTop="20dp"
                    android:layout_width="120dp"
                    android:layout_height="70dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/situp" />

                <TextView
                    android:id="@+id/situp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stamp2"
                    android:textSize="9dp"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/brown"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <!-- Right Side Content -->
        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start">

            <!-- Title -->
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise1"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <!-- Fat Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/fat" />
                <TextView
                    android:id="@+id/fat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="30 minutes"
                    android:layout_marginLeft="20dp" />
            </LinearLayout>

            <!-- Protein Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/protein" />
                <TextView
                    android:id="@+id/protein"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="350 cals"
                    android:layout_marginLeft="20dp" />
            </LinearLayout>

            <!-- Cardio Gif -->
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:paddingTop="146dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/imageCardio"
                    android:layout_width="120dp"
                    android:layout_height="70dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/cardio" />

                <TextView
                    android:id="@+id/cardio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stamp3"
                    android:textSize="9dp"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/brown"
                    android:textStyle="bold" />

                <!-- Workout Gif -->
                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/imageWorkout"
                    android:layout_marginTop="20dp"
                    android:layout_width="120dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_height="70dp"
                    android:src="@drawable/workout" />

                <TextView
                    android:id="@+id/workout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stamp4"
                    android:textSize="9dp"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/brown"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <!-- item_layout.xml -->
    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:visibility="gone"
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date" />




        <TextView
            android:visibility="gone"
            android:id="@+id/exercise_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Exercise Name" />

        <TextView
            android:visibility="gone"
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Duration" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/food_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_background" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_foreground" />

    </LinearLayout>


</androidx.cardview.widget.CardView>
